# Ai-Scrape-and-Outreach

./: .env.example  .gitignore  README.md  preview.html  pyproject.toml  requirements.txt  run.py
app/: config.py  database.py  main.py  scheduler.py
app/models/: campaign.py  lead.py
app/services/: analyzer.py  email_sender.py  email_writer.py  pipeline.py  preview_generator.py  scraper.py  screenshotter.py
app/static/: landing.css  style.css
app/templates/: base.html  dashboard.html  landing.html  lead_detail.html  settings.html
leadpilot/: __init__.py  agent.py  config.py  deployer.py  emailer.py  generator.py  scorer.py  sheets.py
scripts/: run_pipeline.py  seed_test_leads.py
tests/: test_analyzer.py  test_email_writer.py  test_scraper.py
